--- a/benchmark/config/awmc.yaml
+++ b/benchmark/config/awmc.yaml
@@ -1,17 +1,13 @@
 model_name: "facebook/wav2vec2-base-960h"
 
 opt: AdamW
-lr: 0.00002
+lr: 0.0002
 scheduler: null
 
 steps: 10
-em_coef: 0.3
-div_coef: 0
-non_blank: True
-train_feature: True
+train_feature: False
 train_LN: True
 train_all: False
-reweight: True
 bias_only: False
-temp: 2.5
-l2_coef: 0
+
+bitfit: True
